# nppgtags

./: .editorconfig  .gitignore  CMakeLists.txt  NppGTags.sln  NppGTags.vcxproj  README.md  ReleaseNotes.txt  appveyor.yml
src/: AboutWin.cpp  AboutWin.h  ActivityWin.cpp  ActivityWin.h  ActivityWindow.cpp  ActivityWindow.h  AutoCompleteUI.cpp  AutoCompleteUI.h  AutoCompleteWin.cpp  AutoCompleteWin.h  AutoLock.h  Cmd.cpp  Cmd.h  CmdDefines.h  CmdEngine.cpp  CmdEngine.h  Common.cpp  Common.h  Config.cpp  Config.h  ConfigWin.cpp  ConfigWin.h  DBManager.cpp  DBManager.h  DbConfig.cpp  DbConfig.h  DbManager.cpp  DbManager.h  DocLocation.cpp  DocLocation.h  Docking.h  GTags.cpp  GTags.h  GTagsCmd.cpp  GTagsCmd.h  GTagsConfig.cpp  GTagsConfig.h  INpp.cpp  INpp.h  IOWindow.cpp  (+28 more)
src/NppAPI/: Docking.h  Notepad_plus_msgs.h  PluginInterface.h  Sci_Position.h  Scintilla.h  dockingResource.h  menuCmdID.h
